GNOME Bugzilla – Bug 702865
Title bar is not translatable
Last modified: 2013-06-23 19:34:13 UTC
We cannot translate the app name, "Notes", on the title bar. It should be translatable as well as the Name field in the desktop file (bijiben.desktop.in.in).
Created attachment 247521 [details] [review] Make title bar translatable
Review of attachment 247521 [details] [review]: Good
Thank you for the review. The following fix has been pushed: fc2e2df Make title bar translatable
Created attachment 247548 [details] [review] Make title bar translatable
Nice catch!, I applied to 3.8