Make title bar translatable

https://bugzilla.gnome.org/show_bug.cgi?id=702865